--- a/views/summary.html
+++ b/views/summary.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+\<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -62,6 +62,7 @@
 
         <div class="button-group">
             <button onclick="window.location.href='/';">Back to Home</button>
+            <button onclick="window.location.href='/logout';">Logout</button>
         </div>
     </div>
 
