Fix First Round East matchups and ensure correct teams are displayed

--- a/views/firstround_east.html
+++ b/views/firstround_east.html
@@ -13,26 +13,25 @@
     </div>
 
     <div class="container">
-        <h2>FIRST ROUND</h2>
-        <h3>EASTERN CONFERENCE</h3>
+        <h2>FIRST ROUND - EASTERN CONFERENCE</h2>
         <div class="matchup">
-            <img src="/images/hawks.png" alt="Hawks Logo">
+            <img src="/images/bucks.png" alt="Bucks Logo">
             <span>vs.</span>
-            <img src="/images/knicks.png" alt="Knicks Logo">
+            <img id="east7-logo" alt="East 7th Seed Logo">
             <select id="match1-winner" name="match1-winner" class="winner-select" required>
                 <option value="" disabled selected>Select WINNER</option>
             </select>
         </div>
         <div class="matchup">
-            <img src="/images/celtics.png" alt="Celtics Logo">
-            <span>vs.</span>
             <img src="/images/heat.png" alt="Heat Logo">
+            <span>vs.</span>
+            <img id="east8-logo" alt="East 8th Seed Logo">
             <select id="match2-winner" name="match2-winner" class="winner-select" required>
                 <option value="" disabled selected>Select WINNER</option>
             </select>
         </div>
         <div class="matchup">
-            <img src="/images/bucks.png" alt="Bucks Logo">
+            <img src="/images/celtics.png" alt="Celtics Logo">
             <span>vs.</span>
             <img src="/images/pacers.png" alt="Pacers Logo">
             <select id="match3-winner" name="match3-winner" class="winner-select" required>
@@ -40,9 +39,9 @@
             </select>
         </div>
         <div class="matchup">
-            <img src="/images/sixers.png" alt="Sixers Logo">
+            <img src="/images/knicks.png" alt="Knicks Logo">
             <span>vs.</span>
-            <img src="/images/cavaliers.png" alt="Cavaliers Logo">
+            <img src="/images/sixers.png" alt="Sixers Logo">
             <select id="match4-winner" name="match4-winner" class="winner-select" required>
                 <option value="" disabled selected>Select WINNER</option>
             </select>
