--- a/views/firstround_west.html
+++ b/views/firstround_west.html
@@ -13,20 +13,19 @@
     </div>
 
     <div class="container">
-        <h2>FIRST ROUND</h2>
-        <h3>WESTERN CONFERENCE</h3>
+        <h2>FIRST ROUND - WESTERN CONFERENCE</h2>
         <div class="matchup">
-            <img src="/images/lakers.png" alt="Lakers Logo">
+            <img src="/images/nuggets.png" alt="Nuggets Logo">
             <span>vs.</span>
-            <img src="/images/pelicans.png" alt="Pelicans Logo">
+            <img id="west7-logo" alt="West 7th Seed Logo">
             <select id="match1-winner" name="match1-winner" class="winner-select" required>
                 <option value="" disabled selected>Select WINNER</option>
             </select>
         </div>
         <div class="matchup">
-            <img src="/images/nuggets.png" alt="Nuggets Logo">
+            <img src="/images/suns.png" alt="Suns Logo">
             <span>vs.</span>
-            <img src="/images/timberwolves.png" alt="Timberwolves Logo">
+            <img id="west8-logo" alt="West 8th Seed Logo">
             <select id="match2-winner" name="match2-winner" class="winner-select" required>
                 <option value="" disabled selected>Select WINNER</option>
             </select>
@@ -34,15 +33,15 @@
         <div class="matchup">
             <img src="/images/warriors.png" alt="Warriors Logo">
             <span>vs.</span>
-            <img src="/images/clippers.png" alt="Clippers Logo">
+            <img src="/images/mavericks.png" alt="Mavericks Logo">
             <select id="match3-winner" name="match3-winner" class="winner-select" required>
                 <option value="" disabled selected>Select WINNER</option>
             </select>
         </div>
         <div class="matchup">
-            <img src="/images/suns.png" alt="Suns Logo">
+            <img src="/images/lakers.png" alt="Lakers Logo">
             <span>vs.</span>
-            <img src="/images/mavericks.png" alt="Mavericks Logo">
+            <img src="/images/clippers.png" alt="Clippers Logo">
             <select id="match4-winner" name="match4-winner" class="winner-select" required>
                 <option value="" disabled selected>Select WINNER</option>
             </select>
