--- a/views/firstround_east.html
+++ b/views/firstround_east.html
@@ -13,25 +13,25 @@
         <h2>FIRST ROUND - EASTERN CONFERENCE</h2>
         <form id="firstround-east-form">
             <div class="matchup">
-                <img src="/images/bucks.png" alt="Bucks" loading="lazy"> vs. <span id="matchup1-opponent">7th Seed</span>
+                <img src="/images/cleveland.png" alt="Cleveland" loading="lazy"> vs. <span id="matchup1-opponent">8th Seed</span>
                 <select name="matchup1" id="matchup1">
                     <option value="" disabled selected>Select WINNER</option>
                 </select>
             </div>
             <div class="matchup">
-                <img src="/images/hawks.png" alt="Hawks" loading="lazy"> vs. <span id="matchup2-opponent">8th Seed</span>
+                <img src="/images/celtics.png" alt="Boston" loading="lazy"> vs. <span id="matchup2-opponent">7th Seed</span>
                 <select name="matchup2" id="matchup2">
                     <option value="" disabled selected>Select WINNER</option>
                 </select>
             </div>
             <div class="matchup">
-                <img src="/images/celtics.png" alt="Celtics" loading="lazy"> vs. <span id="matchup3-opponent">6th Seed</span>
+                <img src="/images/knicks.png" alt="New York Knicks" loading="lazy"> vs. <span id="matchup3-opponent">Detroit</span>
                 <select name="matchup3" id="matchup3">
                     <option value="" disabled selected>Select WINNER</option>
                 </select>
             </div>
             <div class="matchup">
-                <img src="/images/knicks.png" alt="Knicks" loading="lazy"> vs. <span id="matchup4-opponent">Sixers</span>
+                <img src="/images/bucks.png" alt="Milwaukee" loading="lazy"> vs. <span id="matchup4-opponent">Indiana</span>
                 <select name="matchup4" id="matchup4">
                     <option value="" disabled selected>Select WINNER</option>
                 </select>
