Add series length predictions, MVP, and final score to all rounds

--- a/views/conferencefinals.html
+++ b/views/conferencefinals.html
@@ -25,6 +25,13 @@
                 <select name="eastWinner" id="eastWinner">
                     <option value="" disabled selected>Select WINNER</option>
                 </select>
+                <select name="eastSeries" id="eastSeries">
+                    <option value="" disabled selected>Select SERIES LENGTH</option>
+                    <option value="4-0">4-0</option>
+                    <option value="4-1">4-1</option>
+                    <option value="4-2">4-2</option>
+                    <option value="4-3">4-3</option>
+                </select>
             </div>
             <h3>Western Conference Finals</h3>
             <div class="matchup">
@@ -39,11 +46,17 @@
                 <select name="westWinner" id="westWinner">
                     <option value="" disabled selected>Select WINNER</option>
                 </select>
+                <select name="westSeries" id="westSeries">
+                    <option value="" disabled selected>Select SERIES LENGTH</option>
+                    <option value="4-0">4-0</option>
+                    <option value="4-1">4-1</option>
+                    <option value="4-2">4-2</option>
+                    <option value="4-3">4-3</option>
+                </select>
             </div>
             <button type="button" onclick="window.location.href='/semifinals.html'">Previous</button>
             <button type="submit">Next</button>
         </form>
     </div>
     <script src="/scripts/conferencefinals.js"></script>
-</body>
 </html>
