--- a/views/firstround_west.html
+++ b/views/firstround_west.html
@@ -21,6 +21,13 @@
                 <select name="matchup1" id="matchup1">
                     <option value="" disabled selected>Select WINNER</option>
                 </select>
+                <select name="series1" id="series1">
+                    <option value="" disabled selected>Select SERIES LENGTH</option>
+                    <option value="4-0">4-0</option>
+                    <option value="4-1">4-1</option>
+                    <option value="4-2">4-2</option>
+                    <option value="4-3">4-3</option>
+                </select>
             </div>
             <div class="matchup">
                 <img src="/images/nuggets.png" alt="Denver Nuggets" loading="lazy"> vs. 
@@ -30,6 +37,13 @@
                 </span>
                 <select name="matchup2" id="matchup2">
                     <option value="" disabled selected>Select WINNER</option>
+                </select>
+                <select name="series2" id="series2">
+                    <option value="" disabled selected>Select SERIES LENGTH</option>
+                    <option value="4-0">4-0</option>
+                    <option value="4-1">4-1</option>
+                    <option value="4-2">4-2</option>
+                    <option value="4-3">4-3</option>
                 </select>
             </div>
             <div class="matchup">
@@ -41,6 +55,13 @@
                 <select name="matchup3" id="matchup3">
                     <option value="" disabled selected>Select WINNER</option>
                 </select>
+                <select name="series3" id="series3">
+                    <option value="" disabled selected>Select SERIES LENGTH</option>
+                    <option value="4-0">4-0</option>
+                    <option value="4-1">4-1</option>
+                    <option value="4-2">4-2</option>
+                    <option value="4-3">4-3</option>
+                </select>
             </div>
             <div class="matchup">
                 <img src="/images/grizzlies.png" alt="Memphis Grizzlies" loading="lazy"> vs. 
@@ -51,11 +72,17 @@
                 <select name="matchup4" id="matchup4">
                     <option value="" disabled selected>Select WINNER</option>
                 </select>
+                <select name="series4" id="series4">
+                    <option value="" disabled selected>Select SERIES LENGTH</option>
+                    <option value="4-0">4-0</option>
+                    <option value="4-1">4-1</option>
+                    <option value="4-2">4-2</option>
+                    <option value="4-3">4-3</option>
+                </select>
             </div>
             <button type="button" onclick="window.location.href='/firstround_east.html'">Previous</button>
             <button type="submit">Next</button>
         </form>
     </div>
     <script src="/scripts/firstround_west.js"></script>
-</body>
 </html>
