--- a/views/finals.html
+++ b/views/finals.html
@@ -26,6 +26,14 @@
                     <option value="" disabled selected>Select CHAMPION</option>
                 </select>
             </div>
+            <div class="input-group">
+                <label for="mvp">MVP:</label>
+                <input type="text" name="mvp" id="mvp" placeholder="Enter MVP name">
+            </div>
+            <div class="input-group">
+                <label for="finalScore">Final Score (e.g., 120-115):</label>
+                <input type="text" name="finalScore" id="finalScore" placeholder="Enter final score">
+            </div>
             <button type="button" onclick="window.location.href='/conferencefinals.html'">Previous</button>
             <button type="submit">Submit</button>
         </form>
@@ -33,3 +41,19 @@
     <script src="/scripts/finals.js"></script>
 </body>
 </html>
+
+<style>
+    .input-group {
+        margin: 15px 0;
+        text-align: left;
+    }
+    .input-group label {
+        display: inline-block;
+        width: 150px;
+    }
+    .input-group input {
+        padding: 5px;
+        font-size: 16px;
+        width: 200px;
+    }
+</style>
